Fix logo on mobile

--- a/src/styles/header.pcss
+++ b/src/styles/header.pcss
@@ -112,10 +112,6 @@ header > h1 > span.active {
   border-color: var(--white);
 }
 
-#light-audio {
-  display: none;
-}
-
 @keyframes loading-line {
   0% {
     transform: translateY(10px);
