--- a/src/styles/logo.pcss
+++ b/src/styles/logo.pcss
@@ -6,36 +6,37 @@
   width: 100%;
   z-index: 100;
   pointer-events: none;
+  padding: 0 var(--padding);
 }
 
 .logo-backdrop {
   display: inline-block;
-  margin-left: calc(var(--padding) / -4);
+  margin-left: calc(var(--padding) / -2);
   backdrop-filter: blur(20px);
   background: rgba(0, 0, 0, 0.5);
-  padding: calc(var(--padding) / 4);
-  padding-top: calc(var(--padding) / 2);
+  padding: calc(var(--padding) / 2);
+  padding-top: calc(var(--padding));
   pointer-events: initial;
   transition: var(--transition);
   cursor: pointer;
-  transform: translateY(calc(var(--padding) / -4));
+  transform: translateY(calc(var(--padding) / -2));
   &:hover {
     transform: translateY(0);
   }
 }
 
 .logo {
-  height: calc(var(--padding) / 2);
+  height: calc(var(--padding) * 2);
 }
 
 @media only screen and (min-width: $br-sm) {
   .logo {
-    height: calc(var(--padding) / 2);
-  }
-}
-
-@media only screen and (min-width: $br-md) {
-  .logo {
     height: calc(var(--padding) / 1);
+  }
+  .logo-backdrop {
+    margin-left: calc(var(--padding) / -4);
+    padding: calc(var(--padding) / 4);
+    padding-top: calc(var(--padding) / 2);
+    transform: translateY(calc(var(--padding) / -4));
   }
 }
